--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Bottus",
+    "name": "Darkexe",
     "description": " Whatsapp bot.",
     "keywords": [
         "whatsapp",
@@ -8,11 +8,11 @@
     "stack": "container",
     "env": {
         "ASENA_SESSION": {
-            "description": "Enter whatsapp web session.",
+            "description": "3_7_b290_588f_b1_L_y_F_E.",
             "required": true
         },
         "SUDO": {
-            "description": "Sudo mode, Your number must be an international number. So you should have your number after the country code. Example: 919876543210 (IN)",
+            "description": "Sudo mode, 15068042721 (US)",
             "required": false
         },
         "HANDLERS": {
@@ -31,11 +31,11 @@
             "value": "true"
         },
         "HEROKU_API_KEY": {
-            "description": "Enter Heroku API Key.",
+            "description": "7af7c2f3-05a4-4f73-bf30-237e9ade8f7a.",
             "required": true
         },
         "HEROKU_APP_NAME": {
-            "description": "Enter Heroku APP Name.",
+            "description": "darkexebot.",
             "required": true
         },
         "DEBUG": {
@@ -56,7 +56,7 @@
         "WARN_COUNT": {
             "description": "Maximum no of warns",
             "required": false,
-            "value": "3"
+            "value": "5"
         },
         "WARN_MSG": {
             "description": "Message send while kicking.",
@@ -74,14 +74,14 @@
         },
         "STICKER_PACKNAME": {
             "description": "Sticker pack name,author",
-            "value": "🥰,lyfe00011"
+            "value": "❄️,Darkexe"
         },
         "DISABLE_BOT": {
             "description": "Disable or Block bot in group/chat.Enter required chat jid separated by ,",
             "value": "null"
         },
         "FIND_API_KEY": {
-            "description": "key from https://dashboard.audd.io/",
+            "description": "key from https://dashboard.heroku.com/account",
             "value": "null"
         }
     },
